fix z-index in navigation

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -47,6 +47,7 @@
 
   transition: 0.25s cubic-bezier(0.6, -0.28, 0.735, 0.045);
   transition-property: top;
+  z-index: 2;
 
   .btn {
     background-color: transparent;
